--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/eCitizenHub/">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/eCitizenHub/">Profile</a>
+                    </li>
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -40,6 +43,7 @@
                             <li><a class="dropdown-item" href="#">Support</a></li>
                         </ul>
                     </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link" href="/eCitizenHub/about.html">About</a>
                     </li>
