--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
                             <li><a class="dropdown-item" href="#">Support</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Direct Links
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="https://www.nidw.gov.bd/">NID</a></li>
+                            <li><a class="dropdown-item" href="https://www.epassport.gov.bd/instructions/passport-fees">Passport</a></li>
+                            <li><a class="dropdown-item" href="https://bsp.brta.gov.bd/drivingLicense">License</a></li>
+                            
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Support</a></li>
+                        </ul>
+                    </li>
                     
                     <li class="nav-item">
                         <a class="nav-link" href="/eCitizenHub/about.html">About</a>
