--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
         function func(){
             var NID=document.getElementById("NID").value;
             var pass =document.getElementById('password').value;
-            if(NID=='1234' && pass=='1234'){
+            if(NID=='0112230815' && pass=='1234'){
                 alert("Successfull !!")
                 window.location.assign("index.html")
             }
